# grantscraper

./: README.md  REFRESH_STATUS_FIXES.md  analysis_pipeline.py  det.txt
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SETUP.md  alembic.ini  analysis_pipeline.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 220d0e6a4bc0_change_string_type_to_text_type_for_.py  3a0ccd2a4db9_removed_legacy_details_field_adds_.py  908e26cc1201_create_tables.py
backend/app/: main.py
backend/app/access/: __init__.py  database.py  grants.py  initiatives.py  organisations.py  results.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: gemini.py  models.py
backend/app/routers/: __init__.py  grant_filtering.py  grants.py  pipeline.py  results.py
backend/app/services/: deep_scraper.py  file_service.py  gemini_service.py  pipeline_service.py  pipeline_status.py  refresh_status.py  rerun_single_grant.py  scraper.py
backend/config/: config.py
backend/database/: database.py
backend/migrations/: create_tables.py  recreate_tables.py
backend/models/: gemini.py  models.py
backend/services/: scraper.py
backend/tests/: README.md  test_deep_scraper.py  test_scraper.py
frontend/: .env.example  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: app-sidebar.tsx  data-table.tsx  grants-results.tsx  initiative-card.tsx  initiative-form.tsx  (+11 more)
supabase/: config.toml  default_public_schema.sql
(+29 files in other folders)
